# shell

modules/controlcenter/audio/: AudioDetails.qml  AudioList.qml  AudioPane.qml  AudioSettings.qml
modules/controlcenter/network/: NetworkDetails.qml  NetworkList.qml  NetworkPane.qml  NetworkSettings.qml
nix/: default.nix
plugin/src/Caelestia/: CMakeLists.txt  searchmodel.cpp  searchmodel.hpp
plugin/src/Caelestia/Config/: CMakeLists.txt  bar.hpp  config.cpp  config.hpp  jsonaccessor.cpp  jsonaccessor.hpp  services.hpp
plugin/src/Caelestia/Internal/: CMakeLists.txt  hyprextras.cpp  hyprextras.hpp
plugin/src/Caelestia/Internal/Hypr/: CMakeLists.txt  hyprdevices.cpp  hyprdevices.hpp  hyprextras.cpp  hyprextras.hpp
services/: Hypr.qml  Players.qml
